--- a/Battle.WebUI/web.config
+++ b/Battle.WebUI/web.config
@@ -9,11 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!-- Local
+    <!-- Local - Работает корректно
     <add name="Entities" connectionString="metadata=res://*/Concrete.EFModel.csdl|res://*/Concrete.EFModel.ssdl|res://*/Concrete.EFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=GC;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DefaultConnection" connectionString="Server=NEO\SQLEXPRESS;Database=GC;Integrated Security=True" providerName="System.Data.SqlClient" />
     -->
-    <!--Somee
+    <!--Somee - Работает корректно
     <add name="DefaultConnection" connectionString="workstation id=battle4earth.mssql.somee.com;packet size=4096;user id=AdminOfEarth_SQLLogin_1;pwd=eo6dfynxfn;data source=battle4earth.mssql.somee.com;persist security info=False;initial catalog=battle4earth;" providerName="System.Data.SqlClient" />
     <add name="Entities" connectionString="metadata=res://*;provider=System.Data.SqlClient;provider connection string='workstation id=battle4earth.mssql.somee.com;packet size=4096;user id=AdminOfEarth_SQLLogin_1;pwd=eo6dfynxfn;data source=battle4earth.mssql.somee.com;persist security info=False;initial catalog=battle4earth;'" providerName="System.Data.EntityClient" />
     --> 
