--- a/Battle.WebUI/web.config
+++ b/Battle.WebUI/web.config
@@ -42,6 +42,8 @@
   -->
   <system.web>
     <customErrors mode="Off"/>
+    <httpRuntime targetFramework="4.5"/>
+      
     <roleManager enabled="true" defaultProvider="simple">
       <providers>
         <clear />
